docker postgresql image building with extensions - plpython

--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -3,7 +3,9 @@ version: "3"
 services: 
     db:
         container_name: postgres_container
-        image: postgres:13.3
+        #image: postgres:13.3
+        build:
+            context: .
         restart: always
         environment:
             - POSTGRES_PASSWORD=postgres
@@ -11,7 +13,7 @@ services:
             - POSTGRES_DB=db 
         volumes:
             - pgdata:/var/lib/postgresql/data 
-            - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql 
+            - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql  
         ports:
             - "5432:5432"
         healthcheck:
