--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - POSTGRES_DB=db 
         volumes:
             - pgdata:/var/lib/postgresql/data 
-            - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql  
+            - ./docker/db/sql/init.sql:/docker-entrypoint-initdb.d/init.sql  
         ports:
             - "5432:5432"
         healthcheck:
